Sorted spacing issue between multiple polcies dropdown and imei compared to non multiple policy

--- a/src/AppBundle/Resources/public/sass/page/user.scss
+++ b/src/AppBundle/Resources/public/sass/page/user.scss
@@ -73,7 +73,7 @@ body {
 
 .policy-dropdown-list {
     display: inline-block;
-    // margin-bottom: 20px;
+    margin-bottom: 0;
 
     a {
         &:hover, &:focus {
